--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<p>09090909090909.</p>
 
 </body>
 </html>
+<form>
+  <label for="fname">Nama Saya:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Kelas Saya:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
