--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>SELEKSI PENERIMAAN LOWONGAN 19 JUTA LAPANGAN PEKERJAAN</h1>
 <p>09090909090909.</p>
 
 </body>
@@ -15,4 +15,14 @@
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Kelas Saya:</label><br>
   <input type="text" id="lname" name="lname">
+</form>
+<p>Apakah anda siap menghadapi seleksi program 19 juta lapangan pekerjaan?:</p>
+
+<form>
+  <input type="Saya Siap" id="html" name="fav_language" value="HTML">
+  <label for="html">HTML</label><br>
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">CSS</label><br>
+  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+  <label for="javascript">JavaScript</label>
 </form>
