--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>Apakah anda siap menghadapi seleksi program 19 juta lapangan pekerjaan?:</p>
 
 <form>
-  <input type="Saya Siap" id="html" name="fav_language" value="HTML">
+  <input type="radio" id="Saya siap" name="fav_language" value="HTML">
   <label for="html">HTML</label><br>
   <input type="radio" id="css" name="fav_language" value="CSS">
   <label for="css">CSS</label><br>
