--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <label for="lname">Kelas Saya:</label><br>
   <input type="text" id="lname" name="lname">
 </form>
-<p>Apakah anda siap menghadapi seleksi program 19 juta lapangan pekerjaan?:</p>
+<p>1. Apakah anda siap menghadapi seleksi program 19 juta lapangan pekerjaan?:</p>
 
 <form>
-  <input type="radio" id="Saya siap" name="fav_language" value="HTML">
+  <input type="radio" id="html" name="fav_language" value="Saya siap">
   <label for="html">HTML</label><br>
   <input type="radio" id="css" name="fav_language" value="CSS">
   <label for="css">CSS</label><br>
