--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
+<body style="background-color:gray">
 
 <h1>SELEKSI PENERIMAAN LOWONGAN 19 JUTA LAPANGAN PEKERJAAN</h1>
 <p>09090909090909.</p>
 
-</body>
-</html>
+
 <form>
   <label for="fname">Nama Saya:</label><br>
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Kelas Saya:</label><br>
   <input type="text" id="lname" name="lname">
+  <label for="fname">Jurusan Saya/Bidang Pendidikan Saya:</label><br>
+  <input type="text" id="iname" name="lname">
 </form>
 <p>1. Apakah anda siap menghadapi seleksi program 19 juta lapangan pekerjaan?:</p>
 
 <form>
   <input type="radio" id="html" name="fav_language" value="Saya siap">
-  <label for="html">HTML</label><br>
+  <label for="html">Saya siap</label><br>
   <input type="radio" id="css" name="fav_language" value="CSS">
   <label for="css">CSS</label><br>
   <input type="radio" id="javascript" name="fav_language" value="JavaScript">
   <label for="javascript">JavaScript</label>
 </form>
+
+</body>
+</html>
