Change body background color and update paragraph text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Page Title</title>
 </head>
-<body style="background-color:gray">
+<body style="background-color:tomato">
 
 <h1>SELEKSI PENERIMAAN LOWONGAN 19 JUTA LAPANGAN PEKERJAAN</h1>
-<p>09090909090909.</p>
+<p>wiwokdetok.</p>
 
 
 <form>
